--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@ header nav div {
   gap: 50px;
 }
 
+header nav div.item1 div.menu {
+  display: none;
+}
+
 header nav div a {
   text-decoration: none;
   padding: 6px;
@@ -339,4 +343,101 @@ div.register form button {
 
 div.red {
   color: var(--primary);
+}
+
+@media only screen and (max-width: 768px) {
+
+/* LAYOUT */
+
+  header nav {
+    background-color: #333131;
+    height: fit-content;
+    display: block;
+    width: 100%;
+  }
+
+  header nav div.item1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header nav div.item1 div.menu {
+    display: block;
+  }
+
+  header nav div.navlinks, header nav div.register {
+    display: none;
+  }
+
+  header nav div.navlinks.mobile {
+    display: grid;
+    margin-top: 5%;
+    position: relative;
+    z-index: 999;
+  }
+
+  header nav div.navlinks.mobile a:not(:first-child) {
+    padding: 0;
+    margin-top: -40%;
+  }
+
+  /* HOME */
+
+  /* 1. HomeText */
+
+  div.home {
+    display: block;
+    margin: 0;
+  }
+  
+  div.home div {
+    display: block;
+    width: 100%;
+    margin: 10% auto auto auto
+  }
+
+  div.home div:first-child {
+    margin-left: 16%;
+    margin-right: 16%;
+  }
+
+  div.home div:last-child {
+    margin-top: 5%;
+  }
+  
+  /* div.home div {
+    margin-top: 10%;
+  }
+   */
+  /* div.home div p {
+    text-align: center;
+    font-size: 20px;
+    max-width: max-content;
+  }
+  
+  div.home div.home-text-links {
+    display: flex;
+    justify-content: space-around;
+    gap: 5px;
+  }
+  
+  div.home div a {
+    text-decoration: none;
+    box-sizing: border-box;
+    padding: 12px 20px;
+    border-radius: 4px;
+  }
+  
+  div.home-text-links .home-text-link-1 {
+    background-color: var(--primary);
+  }
+  
+  div.home-text-links .home-text-link-2 {
+    background-color: #fff;
+    color: black;
+  } */
+  
+
+
 }
